2001-03-07  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Audio.cc/h: added a config/audio/enabled switch to kill all audio.
	* */Makefile.am: added support for VPATH builds
	* conf/Makefile.am: don't build confregress with --disable-tools

2001-03-04  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (Lab_schedule): Implemented.

2001-03-03  Jeff Freedman  <jeff@amy.nerble.net>

	* Desk_schedule.
	* Animate wounded men at healers'.

2001-03-01  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (Sew_schedule): Finished it.

2001-02-27  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc: 'Street maintenance' - turn lights off/on,
	open/close shutters.

2001-02-26  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (Walk_to_schedule): Moved door detection to
	Path_walking_actor_action class.

2001-02-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in, acconfig.h: configure changes for OpenBSD support
	* utils.cc, gump_utils.cc: attempt at OpenBSD support. (thanks to Alex Botero-Lowry)
	* Midi.cc: disable forked_player in OpenBSD
	
2001-02-24  Jeff Freedman  <jeff@amy.nerble.net>

	* Npc_actor::handle_event always looks for schedule.
	* Vesper provisioner bug fixed.
	* Fixed weapon bug (throwing non-throwable weapons) and a few others.
	* Remove NPC's from 'nearby' list when they're deleted.

2001-02-24 Dancer Vesperman <dancer@users.sourceforge.net>
	* SDL 1.1 allows us to selectively initialise and terminate
	  subsystems. Make use of that for the audio system initially.
	* Some extended output for caught exceptions, to make them simpler
	  to read.

2001-02-22  Max Horn  <max@quendi.de>
	* tons of fixes I already made days ago and forgot to commit :(
	* files/utils.cc: added fix to U7open to prevent certain problems
	  when reusing stream objects.
	* gumps/Stats_gump.h: fixed Stats_gump::add which had the wrong
	  signature. The first parameter was of type Game* instead of Game_object*